[gd_scene load_steps=16 format=3 uid="uid://ue117ad88ghi"]

[ext_resource type="Script" uid="uid://cbopquiuges8" path="res://scenes/tools/watering_can.gd" id="1_rm0o0"]
[ext_resource type="Texture2D" uid="uid://xoywtnsrog8x" path="res://assets/farming_tools/WateringCan.png" id="2_q2shw"]
[ext_resource type="PackedScene" path="res://scenes/detect_interactable_area.tscn" id="3_4ftxe"]
[ext_resource type="Texture2D" uid="uid://dbsjhqinm08w0" path="res://assets/particles/muzzle_02.png" id="3_q2shw"]
[ext_resource type="AudioStream" uid="uid://rypnhcunbkgr" path="res://assets/audio/water_pour.wav" id="5_d3b0s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4ftxe"]

[sub_resource type="Animation" id="Animation_4ftxe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DetectInteractableArea:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WaterMarker/GPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaterMarker/GPUParticles2D2:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WaterMarker/GPUParticles2D3:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WaterMarker/GPUParticles2D4:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("WaterMarker/GPUParticles2D5:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("WaterMarker/GPUParticles2D6:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("WaterMarker/GPUParticles2D7:emitting")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_q2shw"]
resource_name = "water"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.13446]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_watering"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DetectInteractableArea:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d3b0s"]
_data = {
&"RESET": SubResource("Animation_4ftxe"),
&"water": SubResource("Animation_q2shw")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ftxe"]
height = 54.0

[sub_resource type="Curve" id="Curve_4ftxe"]
_limits = [0.0, 5.0, 0.0, 1.0]
_data = [Vector2(0, 0.488597), 0.0, 0.0, 0, 0, Vector2(1, 0.842697), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_d3b0s"]
curve = SubResource("Curve_4ftxe")

[sub_resource type="Curve" id="Curve_gs2qi"]
_limits = [-200.0, 200.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_3hski"]
curve = SubResource("Curve_gs2qi")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ah6fy"]
particle_flag_disable_z = true
gravity = Vector3(0, 150, 0)
tangential_accel_min = -50.0
tangential_accel_max = 50.0
tangential_accel_curve = SubResource("CurveTexture_3hski")
scale_min = 0.01
scale_max = 0.02
scale_curve = SubResource("CurveTexture_d3b0s")
color = Color(0.341176, 0.847059, 1, 1)
collision_mode = 2

[node name="WateringCan" type="RigidBody2D"]
collision_layer = 4
collision_mask = 96
input_pickable = true
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_rm0o0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.0260491, 0.0260491)
texture = ExtResource("2_q2shw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.36458, 1.36458)
shape = SubResource("CircleShape2D_4ftxe")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d3b0s")
}

[node name="DetectInteractableArea" parent="." instance=ExtResource("3_4ftxe")]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectInteractableArea"]
position = Vector2(-4, 30)
shape = SubResource("CapsuleShape2D_4ftxe")

[node name="WaterMarker" type="Marker2D" parent="."]
position = Vector2(-5, 6)

[node name="GPUParticles2D" type="GPUParticles2D" parent="WaterMarker"]
light_mask = 256
emitting = false
amount = 15
texture = ExtResource("3_q2shw")
lifetime = 0.7
randomness = 0.8
collision_base_size = 0.01
visibility_rect = Rect2(-17, 0, 22, 100)
process_material = SubResource("ParticleProcessMaterial_ah6fy")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="WaterMarker"]
light_mask = 256
position = Vector2(2, 1)
emitting = false
amount = 15
texture = ExtResource("3_q2shw")
lifetime = 0.7
randomness = 0.8
collision_base_size = 0.01
visibility_rect = Rect2(-17, 0, 22, 100)
process_material = SubResource("ParticleProcessMaterial_ah6fy")

[node name="GPUParticles2D3" type="GPUParticles2D" parent="WaterMarker"]
light_mask = 256
position = Vector2(3, 2)
emitting = false
amount = 15
texture = ExtResource("3_q2shw")
lifetime = 0.7
randomness = 0.8
collision_base_size = 0.01
visibility_rect = Rect2(-17, 0, 22, 100)
process_material = SubResource("ParticleProcessMaterial_ah6fy")

[node name="GPUParticles2D4" type="GPUParticles2D" parent="WaterMarker"]
light_mask = 256
position = Vector2(4, 3)
emitting = false
amount = 15
texture = ExtResource("3_q2shw")
lifetime = 0.7
randomness = 0.8
collision_base_size = 0.01
visibility_rect = Rect2(-17, 0, 22, 100)
process_material = SubResource("ParticleProcessMaterial_ah6fy")

[node name="GPUParticles2D5" type="GPUParticles2D" parent="WaterMarker"]
light_mask = 256
position = Vector2(3, 3)
emitting = false
amount = 15
texture = ExtResource("3_q2shw")
lifetime = 0.7
randomness = 0.8
collision_base_size = 0.01
visibility_rect = Rect2(-17, 0, 22, 100)
process_material = SubResource("ParticleProcessMaterial_ah6fy")

[node name="GPUParticles2D6" type="GPUParticles2D" parent="WaterMarker"]
light_mask = 256
position = Vector2(2, 2)
emitting = false
amount = 15
texture = ExtResource("3_q2shw")
lifetime = 0.7
randomness = 0.8
collision_base_size = 0.01
visibility_rect = Rect2(-17, 0, 22, 100)
process_material = SubResource("ParticleProcessMaterial_ah6fy")

[node name="GPUParticles2D7" type="GPUParticles2D" parent="WaterMarker"]
light_mask = 256
position = Vector2(1, 1)
emitting = false
amount = 15
texture = ExtResource("3_q2shw")
lifetime = 0.7
randomness = 0.8
collision_base_size = 0.01
visibility_rect = Rect2(-17, 0, 22, 100)
process_material = SubResource("ParticleProcessMaterial_ah6fy")

[node name="CursorMarker" type="Marker2D" parent="."]
position = Vector2(4, -9)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_d3b0s")
volume_db = -3.962

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
